Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,9 +22,22 @@
       <h1>
 <a id="roda-in" class="anchor" href="#roda-in" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>RODA-In</h1>
 
-<p><a href="https://travis-ci.org/keeps/roda-in"><img src="https://api.travis-ci.org/keeps/roda-in.png?branch=master" alt="Build Status"></a></p>
+<p>RODA-in is a tool to help producers and archivists create Submission Information Packages (SIP) using the file system as the working area. </p>
 
-<p>Application to create SIPs using the file system as the work area. </p>
+<p>In version 2 we revolutionized the way SIP are created to satisfy the need of mass processing data. In the new version you can create thousands of valid SIP in just a few clicks, complete with metadata.</p>
+
+<p>The tool has features such as:</p>
+
+<ul>
+<li>Create, load and edit a classification scheme</li>
+<li>Automatic association of files/folders to SIP(s)</li>
+<li>Automatic association of metadata to SIP(s)</li>
+<li>Creation of metadata templates</li>
+<li>Support for all metadata formats (EAD, DC, etc.)</li>
+<li>Creation of SIP with unlimited size</li>
+<li>Export SIP in two formats: <a href="https://github.com/LibraryOfCongress/bagit-java">BagIt</a> and <a href="http://www.eark-project.com/resources/project-deliverables/51-d33pilotspec">E-ARK</a>
+</li>
+</ul>
 
 <h2>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h2>
@@ -34,6 +47,8 @@
 
 <h2>
 <a id="usage" class="anchor" href="#usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Usage</h2>
+
+<p>Download the <a href="https://github.com/keeps/roda-in/releases">latest release here</a>.</p>
 
 <p>To use RODA-In you must at least have <a href="https://www.java.com/en/download/">Java 8</a>.</p>
 
@@ -73,6 +88,10 @@
 
 <h2>
 <a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributing</h2>
+
+<p><a href="https://travis-ci.org/keeps/roda-in"><img src="https://api.travis-ci.org/keeps/roda-in.png?branch=master" alt="Build Status"></a></p>
+
+<p><a href="https://maven.apache.org/">Maven</a> is required to build RODA-in.</p>
 
 <ol>
 <li>Fork it!</li>
