--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
       <h1 class="project-name">Roda-in</h1>
       <h2 class="project-tagline">Program to create SIPs for RODA</h2>
       <a href="https://github.com/keeps/roda-in" class="btn">View on GitHub</a>
-      <a href="https://github.com/keeps/roda-in/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/keeps/roda-in/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/keeps/roda-in/releases/download/1.0.0-beta.2.1/rodain-app-1.0.0-beta.2.1.exe" class="btn">
+        <i class="fa fa-windows"></i>
+        Download Beta.2.1
+        </a>
+      <a href="https://github.com/keeps/roda-in/releases/download/1.0.0-beta.2.1/rodain-app-1.0.0-beta.2.1.jar" class="btn">Download Beta.2.1 jar</a>
     </section>
 
     <section class="main-content">
