--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         Download for Windows
       </a>
       <a href="https://github.com/keeps/roda-in/releases/download/1.0.0-beta.2.1/rodain-app-1.0.0-beta.2.1.jar" class="btn">
-        Download .jar
+        <i class="fa fa-apple"></i><i class="fa fa-linux"></i>
+        Download for Java
       </a>
     </section>
 
