Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -8,21 +8,14 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
     <section class="page-header">
       <h1 class="project-name">RODA-in</h1>
       <h2 class="project-tagline">Tool to create Submission Information Packages (SIP)</h2>
       <a href="https://github.com/keeps/roda-in" class="btn">View on GitHub</a>
-      <a href="https://github.com/keeps/roda-in/releases/download/1.0.0-beta.2.1/rodain-app-1.0.0-beta.2.1.exe" class="btn">
-        <i class="fa fa-windows"></i>
-        Download for Windows
-      </a>
-      <a href="https://github.com/keeps/roda-in/releases/download/1.0.0-beta.2.1/rodain-app-1.0.0-beta.2.1.jar" class="btn">
-        <i class="fa fa-apple"></i><i class="fa fa-linux"></i>
-        Download for Java
-      </a>
+      <a href="https://github.com/keeps/roda-in/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/keeps/roda-in/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
@@ -55,7 +48,7 @@
 
 <ul>
 <li>BagIt, a hierarchical file packaging format for storage and transfer of arbitrary digital content.  A "bag" has just enough structure to enclose descriptive "tags" and a "payload" but does not require knowledge of the payload's internal semantics. This BagIt format should be suitable for disk-based or network-based storage and transfer.  BagIt is widely used in the practice of digital preservation. The specification of BagIt can be found <a href="https://tools.ietf.org/html/draft-kunze-bagit-13">here</a>.</li>
-<li>E-ARK SIP format, specification <a href="http://www.eark-project.com/resources/project-deliverables/17-d32-e-ark-sip-draft-specification/file">here</a>
+<li>E-ARK SIP format, a Submission Information Package format developed by the EU funded E-ARK Project. The specification can be found <a href="http://www.eark-project.com/resources/project-deliverables/17-d32-e-ark-sip-draft-specification/file">here</a>
 </li>
 </ul>
 
@@ -124,7 +117,22 @@
 <h2>
 <a id="tutorials" class="anchor" href="#tutorials" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tutorials</h2>
 
-<p>Will be available soon...</p>
+<p>In this section you may find a few video tutorials on how to use the RODA-in tool to create Submission Information Packages (SIP). </p>
+
+<h4>
+<a id="how-to-download-and-run-the-application" class="anchor" href="#how-to-download-and-run-the-application" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to download and run the application</h4>
+
+<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=bIcWnOJVyLg%0A" target="_blank"><img src="http://img.youtube.com/vi/bIcWnOJVyLg/0.jpg" alt="Tutorial" width="240" height="180" border="1"></a></p>
+
+<h4>
+<a id="how-to-create-sips-from-local-files-and-folders" class="anchor" href="#how-to-create-sips-from-local-files-and-folders" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to create SIPs from local files and folders</h4>
+
+<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=FRd6NUHZ3R4%0A" target="_blank"><img src="http://img.youtube.com/vi/FRd6NUHZ3R4/0.jpg" alt="Tutorial" width="240" height="180" border="1"></a></p>
+
+<h4>
+<a id="advanced-ways-of-creating-sips" class="anchor" href="#advanced-ways-of-creating-sips" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Advanced ways of creating SIPs</h4>
+
+<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=nJEeTFdEyWM%0A" target="_blank"><img src="http://img.youtube.com/vi/nJEeTFdEyWM/0.jpg" alt="Tutorial" width="240" height="180" border="1"></a></p>
 
 <h2>
 <a id="how-to-build-from-source" class="anchor" href="#how-to-build-from-source" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to build from source</h2>
@@ -170,13 +178,12 @@
 <a id="further-reading" class="anchor" href="#further-reading" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Further reading</h2>
 
 <ul>
-<li>Bagit spec</li>
-<li>SIP spec</li>
-<li>Common spec</li>
-<li>RODA source code</li>
-<li>RODA community</li>
-<li>E-ARK project</li>
-<li>etc.</li>
+<li><a href="https://tools.ietf.org/html/draft-kunze-bagit-08">Bagit specification</a></li>
+<li><a href="http://www.eark-project.com/resources/project-deliverables/17-d32-e-ark-sip-draft-specification/file">E-ARK SIP specification</a></li>
+<li><a href="http://www.eark-project.com/resources/specificationdocs/50-draftcommonspec-1/file">E-ARK Common specification</a></li>
+<li><a href="http://github.com/keeps/roda">RODA source code</a></li>
+<li><a href="http://www.roda-community.org">RODA Community Web site</a></li>
+<li><a href="http://www.eark-project.com">E-ARK Project Web site</a></li>
 </ul>
 
 <h2>
