Fixing download links and youtube video embeds

--- a/index.html
+++ b/index.html
@@ -8,14 +8,25 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
     <section class="page-header">
       <h1 class="project-name">RODA-in</h1>
       <h2 class="project-tagline">Tool to create Submission Information Packages (SIP)</h2>
       <a href="https://github.com/keeps/roda-in" class="btn">View on GitHub</a>
-      <a href="https://github.com/keeps/roda-in/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/keeps/roda-in/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/keeps/roda-in/releases/download/1.0.0-beta.2.1/rodain-app-1.0.0-beta.2.1.exe" class="btn">
+        <i class="fa fa-windows"></i>
+        Download for Windows
+      </a>
+      <a href="https://github.com/keeps/roda-in/releases/download/1.0.0-beta.2.1/rodain-app-1.0.0-beta.2.1.jar" class="btn">
+        <i class="fa fa-apple"></i>
+        Download for Mac
+      </a>
+      <a href="https://github.com/keeps/roda-in/releases/download/1.0.0-beta.2.1/rodain-app-1.0.0-beta.2.1.jar" class="btn">
+        <i class="fa fa-linux"></i>
+        Download for Linux
+      </a>
     </section>
 
     <section class="main-content">
@@ -122,17 +133,17 @@
 <h4>
 <a id="how-to-download-and-run-the-application" class="anchor" href="#how-to-download-and-run-the-application" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to download and run the application</h4>
 
-<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=bIcWnOJVyLg%0A" target="_blank"><img src="http://img.youtube.com/vi/bIcWnOJVyLg/0.jpg" alt="Tutorial" width="240" height="180" border="1"></a></p>
+<iframe width="853" height="480" src="https://www.youtube.com/embed/bIcWnOJVyLg" frameborder="0" allowfullscreen></iframe>
 
 <h4>
 <a id="how-to-create-sips-from-local-files-and-folders" class="anchor" href="#how-to-create-sips-from-local-files-and-folders" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to create SIPs from local files and folders</h4>
 
-<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=FRd6NUHZ3R4%0A" target="_blank"><img src="http://img.youtube.com/vi/FRd6NUHZ3R4/0.jpg" alt="Tutorial" width="240" height="180" border="1"></a></p>
+<iframe width="853" height="480" src="https://www.youtube.com/embed/FRd6NUHZ3R4" frameborder="0" allowfullscreen></iframe>
 
 <h4>
 <a id="advanced-ways-of-creating-sips" class="anchor" href="#advanced-ways-of-creating-sips" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Advanced ways of creating SIPs</h4>
 
-<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=nJEeTFdEyWM%0A" target="_blank"><img src="http://img.youtube.com/vi/nJEeTFdEyWM/0.jpg" alt="Tutorial" width="240" height="180" border="1"></a></p>
+<iframe width="853" height="480" src="https://www.youtube.com/embed/nJEeTFdEyWM" frameborder="0" allowfullscreen></iframe>
 
 <h2>
 <a id="how-to-build-from-source" class="anchor" href="#how-to-build-from-source" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to build from source</h2>
