Moved open on github button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <section class="page-header">
       <h1 class="project-name">RODA-in</h1>
       <h2 class="project-tagline">Tool to create Submission Information Packages (SIP)</h2>
-      <a href="https://github.com/keeps/roda-in" class="btn">View on GitHub</a>
       <a href="https://github.com/keeps/roda-in/releases/download/1.0.0-beta.2.1/rodain-app-1.0.0-beta.2.1.exe" class="btn">
         <i class="fa fa-windows"></i>
         Download for Windows
@@ -199,8 +198,7 @@
 
 <h2>
 <a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributing</h2>
-
-<p><a href="https://travis-ci.org/keeps/roda-in"><img src="https://api.travis-ci.org/keeps/roda-in.png?branch=master" alt="Build Status"></a></p>
+<a href="https://github.com/keeps/roda-in" class="btn">View on GitHub</a> <a href="https://travis-ci.org/keeps/roda-in"><img src="https://api.travis-ci.org/keeps/roda-in.png?branch=master" alt="Build Status"></a>
 
 <p><a href="https://maven.apache.org/">Maven</a> is required to build RODA-in.</p>
 
