--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 <h2>
 <a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributing</h2>
-<a href="https://github.com/keeps/roda-in" class="btn">View on GitHub</a> <a href="https://travis-ci.org/keeps/roda-in"><img src="https://api.travis-ci.org/keeps/roda-in.png?branch=master" alt="Build Status"></a>
+<a href="https://travis-ci.org/keeps/roda-in"><img src="https://api.travis-ci.org/keeps/roda-in.png?branch=master" alt="Build Status"></a> <a href="https://github.com/keeps/roda-in">View on GitHub</a>
 
 <p><a href="https://maven.apache.org/">Maven</a> is required to build RODA-in.</p>
 
