--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <section class="page-header">
       <h1 class="project-name">RODA-in</h1>
       <h2 class="project-tagline">Tool to create Submission Information Packages (SIP)</h2>
-      <a href="https://github.com/keeps/roda-in/releases/download/1.0.0-beta.2.2/rodain-app-1.0.0-beta.2.2.exe" class="btn">
+      <a href="https://github.com/keeps/roda-in/releases/download/2.0.0-alpha.3/rodain-app-2.0.0-alpha.3.exe" class="btn">
         <i class="fa fa-windows"></i>
         Download for Windows
       </a>
-      <a href="https://github.com/keeps/roda-in/releases/download/1.0.0-beta.2.2/rodain-app-1.0.0-beta.2.2.jar" class="btn">
+      <a href="https://github.com/keeps/roda-in/releases/download/2.0.0-alpha.3/rodain-app-2.0.0-alpha.3.jar" class="btn">
         <i class="fa fa-apple"></i>
         Download for Mac
       </a>
-      <a href="https://github.com/keeps/roda-in/releases/download/1.0.0-beta.2.2/rodain-app-1.0.0-beta.2.2.jar" class="btn">
+      <a href="https://github.com/keeps/roda-in/releases/download/2.0.0-alpha.3/rodain-app-2.0.0-alpha.3.jar" class="btn">
         <i class="fa fa-linux"></i>
         Download for Linux
       </a>
