Updated index.html and addedthe roda-in logo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <img src="rodain-logo.png" alt="RODA-in by keeps"> 
     <title>RODA-in by keeps</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
@@ -13,7 +12,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">RODA-in</h1>
+      <img src="images/rodain-logo.png" alt="RODA-in"> 
       <h2 class="project-tagline">Tool to create Submission Information Packages (SIP)</h2>
       <a href="https://github.com/keeps/roda-in/releases/download/2.0.0-alpha.3.1/rodain-app-2.0.0-alpha.3.1.exe" class="btn">
         <i class="fa fa-windows"></i>
