--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <section class="page-header">
-      <img src="images/rodain-logo.png" alt="RODA-in"> 
+      <img src="images/rodain-logo.png" alt="RODA-in" style="max-width: 100%; width: 650px;"> 
       <h2 class="project-tagline">Tool to create Submission Information Packages (SIP)</h2>
       <a href="https://github.com/keeps/roda-in/releases/download/2.0.0-alpha.3.1/rodain-app-2.0.0-alpha.3.1.exe" class="btn">
         <i class="fa fa-windows"></i>
