--- a/index.html
+++ b/index.html
@@ -8,24 +8,14 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
     <section class="page-header">
-      <img src="images/rodain-logo.png" alt="RODA-in" style="max-width: 100%; width: 650px;"> 
+      <h1 class="project-name">RODA-in</h1>
       <h2 class="project-tagline">Tool to create Submission Information Packages (SIP)</h2>
-      <a href="https://github.com/keeps/roda-in/releases/download/2.0.0-alpha.6.2/rodain-app-2.0.0-alpha.6.2.exe" class="btn">
-        <i class="fa fa-windows"></i>
-        Download for Windows
-      </a>
-      <a href="https://github.com/keeps/roda-in/releases/download/2.0.0-alpha.6.2/rodain-app-2.0.0-alpha.6.2.jar" class="btn">
-        <i class="fa fa-apple"></i>
-        Download for Mac
-      </a>
-      <a href="https://github.com/keeps/roda-in/releases/download/2.0.0-alpha.6.2/rodain-app-2.0.0-alpha.6.2.jar" class="btn">
-        <i class="fa fa-linux"></i>
-        Download for Linux
-      </a>
+      <a href="https://github.com/keeps/roda-in" class="btn">View on GitHub</a>
+      <a href="https://github.com/keeps/roda-in/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/keeps/roda-in/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
@@ -49,7 +39,7 @@
 </li>
 </ul>
 
-<p>This application was part of the <a href="http://www.roda-community.org">RODA project</a> and now has been released as a project by its own due to the increasing interest in its particular functionality. It is now being further developed in the <a href="http://www.eark-project.com">EARK project</a>.</p>
+<p>This application was part of the <a href="http://www.roda-community.org">RODA project</a> and now has been released as a project by its own due to the increasing interest in its particular functionality. It is now being further developed in the <a href="http://www.eark-project.com">E-ARK project</a>.</p>
 
 <h2>
 <a id="supported-sip-formats" class="anchor" href="#supported-sip-formats" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Supported SIP formats</h2>
@@ -82,7 +72,7 @@
 
 <p>The latest version of RODA-in is available <a href="https://github.com/keeps/roda-in/releases">here</a>.</p>
 
-<p>To use RODA-in no installation is required. You just need to download the latest release of the application and run it by double clicking the downloaded file (*.jar extension). If that doesn't work, open a console window (or terminal) and type</p>
+<p>To use RODA-in no installation is required. You just need to download the latest release of the application and run it by double clicking the downloaded file (*.jar extension). If that doesn't work, open a console window (or terminal) and creatorOption</p>
 
 <pre><code>java -jar roda-in-app-x.y.z.jar
 </code></pre>
@@ -102,7 +92,7 @@
 </ul>
 </li>
 <li>Drag files/folders from the left panel to the center panel into the appropriate node in the classification scheme.</li>
-<li>Choose the type of data and metadata association. This will have impact on the number and structure of the SIPs created.</li>
+<li>Choose the creatorOption of data and metadata association. This will have impact on the number and structure of the SIPs created.</li>
 <li>(Optional) Inspect the created SIPs, edit metadata and content.</li>
 <li>Export the SIPs to a folder</li>
 </ol>
@@ -132,17 +122,59 @@
 <h4>
 <a id="how-to-download-and-run-the-application" class="anchor" href="#how-to-download-and-run-the-application" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to download and run the application</h4>
 
-<iframe width="853" height="480" src="https://www.youtube.com/embed/bIcWnOJVyLg" frameborder="0" allowfullscreen></iframe>
+<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=bIcWnOJVyLg%0A"><img src="http://img.youtube.com/vi/bIcWnOJVyLg/0.jpg" alt="Tutorial" width="240" height="180" border="1"></a></p>
 
 <h4>
 <a id="how-to-create-sips-from-local-files-and-folders" class="anchor" href="#how-to-create-sips-from-local-files-and-folders" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to create SIPs from local files and folders</h4>
 
-<iframe width="853" height="480" src="https://www.youtube.com/embed/FRd6NUHZ3R4" frameborder="0" allowfullscreen></iframe>
+<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=FRd6NUHZ3R4%0A"><img src="http://img.youtube.com/vi/FRd6NUHZ3R4/0.jpg" alt="Tutorial" width="240" height="180" border="1"></a></p>
 
 <h4>
 <a id="advanced-ways-of-creating-sips" class="anchor" href="#advanced-ways-of-creating-sips" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Advanced ways of creating SIPs</h4>
 
-<iframe width="853" height="480" src="https://www.youtube.com/embed/nJEeTFdEyWM" frameborder="0" allowfullscreen></iframe>
+<p><a href="http://www.youtube.com/watch?feature=player_embedded&amp;v=nJEeTFdEyWM%0A"><img src="http://img.youtube.com/vi/nJEeTFdEyWM/0.jpg" alt="Tutorial" width="240" height="180" border="1"></a></p>
+
+<h4>
+<a id="the-templating-system" class="anchor" href="#the-templating-system" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The templating system</h4>
+
+<p>Since it's tedious to edit the template files by hand, we added a way to create forms based on the fields of the templates. These files are located in the "roda-in" folder (My Documents when using Windows and the user's home directory if using Unix), under the "templates" folder. Using the powerful Handlebars engine, anyone can create template files with the necessary information to create the form. In addition to a simple tag, (e.g. {{person}}), we can now add options which will modify the way each field is created. These options are key-value elements, e.g. <code>title="SIP creation using RODA-in"</code>, where the key is the name of the option and the value is the value that will be given to that option. Only the first tag should have options, i.e., if there's two tags with the same name, the options of the second are ignored. The options are not required, the form is still created with a simple tag, which creates a simple text field.</p>
+
+<p>The available options that alter the fields created for each tag are:</p>
+
+<ul>
+<li>value - the predefined value of the field</li>
+<li>order - the order of the field</li>
+<li>type - the type of the field. The possible values are:
+
+<ul>
+<li>text - text field</li>
+<li>text-area - Text area. Larger than a field text.</li>
+<li>date - text field with a date picker</li>
+<li>list - list with the possible values (combo box)</li>
+</ul>
+</li>
+<li>list - List with the possible values that a field can have. Usable when <code>type="list"</code>. The format is a JSON array. Example: <code>[option A, option B, "option C"]</code>
+</li>
+<li>label - The label that appears to the left of the field.</li>
+<li>mandatory - If set to true the label is styled in bold to draw attention.</li>
+<li>hidden - If set to true the field is hidden</li>
+<li>auto-generate - Fills the value with one of the available generators. Overrides the value option:
+
+<ul>
+<li>now - the current date in the format year/month/day</li>
+<li>id - generates an identifier</li>
+<li>title - generates a title</li>
+<li>level - adds the current description level</li>
+<li>parentid - adds the parent's id, if it exists</li>
+<li>language - adds the system language, based on the locale. Example: "português" or "English"</li>
+</ul>
+</li>
+</ul>
+
+<p>The following is an example of how the tags can be used:</p>
+
+<pre><code>{{title order=1 type="text" label="Template title" mandatory=true auto-generate="title"}}
+</code></pre>
 
 <h2>
 <a id="how-to-build-from-source" class="anchor" href="#how-to-build-from-source" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How to build from source</h2>
@@ -152,7 +184,7 @@
 <li>Clone the repository by issuing the command <code>git clone https://github.com/keeps/roda-in.git</code>
 </li>
 <li>Change directory to "roda-in"</li>
-<li>Install by running the following command: <code>mvn install</code>
+<li>Install by running the following command: <code>mvn -Dmaven.test.skip=true clean package</code>
 </li>
 </ol>
 
@@ -198,8 +230,8 @@
 
 <h2>
 <a id="contributing" class="anchor" href="#contributing" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributing</h2>
-<a href="https://travis-ci.org/keeps/roda-in"><img src="https://api.travis-ci.org/keeps/roda-in.png?branch=master" alt="Build Status"></a> 
-<p><a href="https://github.com/keeps/roda-in">View on GitHub</a></p>
+
+<p><a href="https://travis-ci.org/keeps/roda-in"><img src="https://api.travis-ci.org/keeps/roda-in.png?branch=master" alt="Build Status"></a></p>
 
 <p><a href="https://maven.apache.org/">Maven</a> is required to build RODA-in.</p>
 
@@ -213,6 +245,20 @@
 </li>
 <li>Submit a pull request :D</li>
 </ol>
+
+<h3>
+<a id="translating" class="anchor" href="#translating" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Translating</h3>
+
+<p>To help make RODA-in better you can translate it to your language. </p>
+
+<p>RODA-in uses Transifex, a localization platform, and you can find the <a href="https://www.transifex.com/roda-1/roda-in/">project here</a>. If you don't know how to use Transifex, check out <a href="http://docs.transifex.com/tutorials/txeditor/">these instructions</a>, it's really easy and simple.</p>
+
+<h3>
+<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributors</h3>
+
+<ul>
+<li>Szatucsek Zoltán, Hungarian National Archives</li>
+</ul>
 
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h2>
