--- a/index.html
+++ b/index.html
@@ -11,11 +11,20 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">RODA-in</h1>
+      <img src="images/rodain-logo.png" alt="RODA-in" style="max-width: 100%; width: 650px;"> 
       <h2 class="project-tagline">Tool to create Submission Information Packages (SIP)</h2>
-      <a href="https://github.com/keeps/roda-in" class="btn">View on GitHub</a>
-      <a href="https://github.com/keeps/roda-in/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/keeps/roda-in/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/keeps/roda-in/releases/download/2.0.0-alpha.7/rodain-app-2.0.0-alpha.7.exe" class="btn">
+        <i class="fa fa-windows"></i>
+        Download for Windows
+      </a>
+      <a href="https://github.com/keeps/roda-in/releases/download/2.0.0-alpha.7/rodain-app-2.0.0-alpha.7.jar" class="btn">
+        <i class="fa fa-apple"></i>
+        Download for Mac
+      </a>
+      <a href="https://github.com/keeps/roda-in/releases/download/2.0.0-alpha.7/rodain-app-2.0.0-alpha.7.jar" class="btn">
+        <i class="fa fa-linux"></i>
+        Download for Linux
+      </a>
     </section>
 
     <section class="main-content">
