added images and help in english

--- a/src/main/resources/help/help_pt.html
+++ b/src/main/resources/help/help_pt.html
@@ -29,7 +29,7 @@
 <p>
   A aplicação é composta por 4 painéis distintos assinalados a cor azul claro:
   <ol>
-    <li><strong>Explorador de ficheiros</strong> - Onde o utilizador deve selecionar os ficheiros que pretende empacotar.</li>
+    <li><strong>Explorador de ficheiros</strong> - onde o utilizador deve selecionar os ficheiros que pretende empacotar.</li>
     <li><strong>Pacotes de Informação</strong> - onde o utilizador pode consultar os SIP que já foram preparados.</li>
     <li><strong>Inspecionar</strong> - onde o utilizador pode consultar a informação (metadados e dados) que se encontra dentro do pacote de submissão.</li>
     <li><strong>Pacotes de submissão</strong> - onde o utilizador pode exportar os pacotes que foram preparados.</li>
@@ -38,7 +38,7 @@
 
 
 
-<img src="layout.png" width="100%"/>
+<img src="layout_pt.png" width="100%"/>
 
 Cada um destes painéis é explicado em detalhe de seguida.
 
@@ -88,7 +88,7 @@ O método de associação de dados define as regras que são utilizadas para tra
 </p>
 <p>
 
-<img src="association.png" width="100%"/>
+<img src="association_pt.png" width="100%"/>
 </p>
 
 
@@ -100,7 +100,7 @@ Após a seleção de um método de associação de ficheiros em pacotes, o siste
 
 <p>
 
-<img src="metadata.png" width="100%"/>
+<img src="metadata_pt.png" width="100%"/>
 </p>
 
 <h2>3. Reorganize os seus pacotes de informação no plano de classificação</h2>
