Download button for latest release and to inspect source code

--- a/index.html
+++ b/index.html
@@ -12,19 +12,15 @@
   </head>
   <body>
     <section class="page-header">
-      <img src="images/rodain-logo.png" alt="RODA-in" style="max-width: 100%; width: 650px;"> 
+      <img src="images/rodain-logo.png" alt="RODA-in" style="max-width: 100%; width: 650px;">
       <h2 class="project-tagline">Tool to create Submission Information Packages (SIP)</h2>
-      <a href="https://github.com/keeps/roda-in/releases/download/2.0.0-beta.3/rodain-app-2.0.0-beta.3.exe" class="btn">
-        <i class="fa fa-windows"></i>
-        Download for Windows
+      <a href="https://github.com/keeps/roda-in/releases/latest" class="btn">
+        <i class="fa fa-download" aria-hidden="true"></i>
+        Download latest release
       </a>
-      <a href="https://github.com/keeps/roda-in/releases/download/2.0.0-beta.3/rodain-app-2.0.0-beta.3.jar" class="btn">
-        <i class="fa fa-apple"></i>
-        Download for Mac
-      </a>
-      <a href="https://github.com/keeps/roda-in/releases/download/2.0.0-beta.3/rodain-app-2.0.0-beta.3.jar" class="btn">
-        <i class="fa fa-linux"></i>
-        Download for Linux
+      <a href="https://github.com/keeps/roda-in" class="btn">
+        <i class="fa fa-code" aria-hidden="true"></i>
+        Inspect source code
       </a>
     </section>
 
@@ -267,7 +263,7 @@
 <a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contributors</h3>
 
 <ul>
-<li>Szatucsek Zoltán, Hungarian National Archives</li>
+<li>Zoltán Szatucsek, Hungarian National Archives</li>
 </ul>
 
 <h2>
