--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Download latest release
       </a>
       <a href="https://github.com/keeps/roda-in" class="btn">
-        <i class="fa fa-code" aria-hidden="true"></i>
+        <i class="fa fa-github" aria-hidden="true"></i>
         Inspect source code
       </a>
     </section>
