--- a/src/main/resources/help/help_pt.html
+++ b/src/main/resources/help/help_pt.html
@@ -17,7 +17,7 @@
 <p>
   Para se criar um conjunto de SIPs, o utilizador deverá seguir um conjunto de passos:
   <ol>
-    <li><strong>Selecionar ficheiros </strong> no painél "Explorador de ficheiros".</li>
+    <li><strong>Selecionar ficheiros </strong> no painel "Explorador de ficheiros".</li>
     <li><strong>Agregar ficheiros </strong>em pacotes arrastando os ficheiros/pastas para área dedicada à gestão de Pacotes de Informação.</li>
     <li><strong>Selecionar um esquema</strong> de metadados</li>
     <li><strong>Inspecionar</strong> o pacote para aferir a sua completude e definir os metadados descritivos.</li>
@@ -49,8 +49,8 @@ Cada um destes painéis é explicado em detalhe de seguida.
   <p>Um ficheiro pode estar num de 3 estados: normal, ignorado ou mapeado: </p>
 <ul>
   <li><strong>Normal</strong> - é o estado normal de um ficheiro e o único estado a partir do qual SIPs podem ser criados.</li>
-  <li><strong>Ignorado</strong> - não serão utilizados na criação de pacotes. Podem ser ignorados tendo por base regras definidas na configuração da aplicação ou manualmente através do botão "Ignorar". Este objetos são escondidos por omissão, mas podem ser apresentados ativando uma opção do menu "Ver".</li>
-  <li><strong>Mapeado</strong> - é um ficheiro que já foi adicionado a um SIP. O objetivo é implementar uma estratégia "mapear e esquecer" onde os utilizadores arrastam ficheiros a partir deste painél, desaparecendo depois da interface. Isto permite ao utilizador focar-se apenas nos objetos restantes, melhorando assim a sua produtividade no projeto de criação de SIPs.</li>
+  <li><strong>Ignorado</strong> - não serão utilizados na criação de pacotes. Podem ser ignorados tendo por base regras definidas na configuração da aplicação ou manualmente através do botão "Ignorar". Estes objetos são escondidos por omissão, mas podem ser apresentados ativando uma opção do menu "Ver".</li>
+  <li><strong>Mapeado</strong> - é um ficheiro que já foi adicionado a um SIP. O objetivo é implementar uma estratégia "mapear e esquecer" onde os utilizadores arrastam ficheiros a partir deste painel, desaparecendo depois da interface. Isto permite ao utilizador focar-se apenas nos objetos restantes, melhorando assim a sua produtividade no projeto de criação de SIPs.</li>
 </ul>
 </p>
 
@@ -105,13 +105,13 @@ Após a seleção de um método de associação de ficheiros em pacotes, o siste
 
 <h2>3. Reorganize os seus pacotes de informação no plano de classificação</h2>
 
-Uma vez criados pacotes de informação, o utilizador pode reorganizá-los numa estrutura hierárquica que depois se irá reflectir no repositório. Por exemplo, o utilizador pode criar um pacote de informação apenas com metadados ao qual poderá chamar "Correspondência recebida em 2015" que permite agrupar um conjunto de pacotes de dados sob a alçada de um elemento agregador.
+Uma vez criados pacotes de informação, o utilizador pode reorganizá-los numa estrutura hierárquica que depois se irá refletir no repositório. Por exemplo, o utilizador pode criar um pacote de informação apenas com metadados ao qual poderá chamar "Correspondência recebida em 2015" que permite agrupar um conjunto de pacotes de dados sob a alçada de um elemento agregador.
 
 <h2>4. Inspecione e/ou altere os pacotes preparados</h2>
 
 <p>Os dados dos pacotes estão divididos em "representações" que podem ser adicionadas ou removidas. Também é possível remover ficheiros e pastas do conteúdo do SIP. Estes ficheiros regressam ao estado <em>normal</em> e passam a estar disponíveis no Explorador de ficheiros para serem incluídos noutro SIP. O sistema de "drag n' drop" da estrutura de pasta de dados permite reorganizar o conteúdo do SIP e mover ficheiros entre representações. Ao clicar no botão mais à direita, o painel altera entre "Dados" e "Documentação".</p>
 
-<p><strong>Documentação</strong> pode ser adicionada aos SIPs para complementar a compreensão da informação que se está a arquivar na secção de "Dados". Os ficheiros adicionados à documentação não altera o estado dos ficheiros para "mapeado", de modo a que o produtor possa adicionar o mesmo ficheiro à documentação de 1 ou mais SIPs. Depois de adicionados, os ficheiros podem ser removidos e reorganizados tal como acontece na secção de "Dados".</p>
+<p><strong>Documentação</strong> pode ser adicionada aos SIPs para complementar a compreensão da informação que se está a arquivar na secção de "Dados". Os ficheiros adicionados à documentação não alteram o estado dos ficheiros para "mapeado", de modo a que o produtor possa adicionar o mesmo ficheiro à documentação de 1 ou mais SIPs. Depois de adicionados, os ficheiros podem ser removidos e reorganizados tal como acontece na secção de "Dados".</p>
 
 <p>Quando os SIPs são criados através da opção de modelo de metadados, pode editar os metadados através de um <strong>formulário</strong>. Para além disso, o <strong>conteúdo XML</strong> do ficheiro de metadados pode ser apresentado e editado através da interface.</P>
 <p>Para além de editar ficheiros de metadados, é possível <strong>adicionar</strong> e <strong>remover</strong> ficheiros de metadados. Existem 3 opções disponíveis ao adicionar um novo ficheiro de metadados:</p>
@@ -142,20 +142,20 @@ O último passo no fluxo de criação de SIP é exportar os SIPs  para um format
 <p>O plano de classificação pode ser importado a partir de um ficheiro ou criado diretamente na aplicação.</p>
 <p>Na primeira opção, o utilizador precisa de importar um ficheiro que foi fornecido pelo responsável pelo Repositório</p>
 
-<p>Para criar um plano de classificação, o primeiro passo é adicionar itens de descrição através do botão "Adicionar" apresentado na zona inferior do painel central. Ao clicar no botão,um novo item de descrição é criado e adicionado por baixo do item de descrição selecionado no painel central ou na raíz se nenhum item estiver selecionado ou se o item selecionado for um SIP.</p>
+<p>Para criar um plano de classificação, o primeiro passo é adicionar itens de descrição através do botão "Adicionar" apresentado na zona inferior do painel central. Ao clicar no botão, um novo item de descrição é criado e adicionado por baixo do item de descrição selecionado no painel central ou na raiz se nenhum item estiver selecionado ou se o item selecionado for um SIP.</p>
 
 <p>Para além de poder adicionar itens, existem duas outras ações disponíveis: remover e reorganizar.</p>
 
 
 
-<p>Para criar um plano de classificação no RODA-in, o primeiro passo é adicionar items de descrição utilizado o botão <strong>Adicionar</strong> situado na parte inferior do painel central. Ao carregar nesse botão, um novo item de descrição é criado e adicionado por baixo do item de descrição selecionado ou na raíz se nenhum item estiver selecionado no painel central ou se o item selecionado for um SIP.</p>
+<p>Para criar um plano de classificação no RODA-in, o primeiro passo é adicionar itens de descrição utilizado o botão <strong>Adicionar</strong> situado na parte inferior do painel central. Ao carregar nesse botão, um novo item de descrição é criado e adicionado por baixo do item de descrição selecionado ou na raiz se nenhum item estiver selecionado no painel central ou se o item selecionado for um SIP.</p>
 
 <p>Arrastando e largando os itens selecionados por cima de outros itens, o plano de classificação pode ser  <strong>reorganizado</strong>. O comportamento do sistema de Drag'n'drop pode ser descrito da seguinte forma:</p>
 <ul>
 <li>Ao largar itens por cima de um item de descrição existente, estes são adicionados como descendentes diretos do item existente.</li>
-<li>Ao largar itens numa secção vazia da árvore, estes são adicionados na raíz desta árvore.</li>
-<li>Ao largar itens por cima de um pacote de informação, estes são adicionados com irmãos deste. Isto acontece pois pacotes não podem ter descendentes no RODA-in.</li>
-<li>Ao largar um pai por cima de um dos seus descendentes, a ação é cancelada, pois caso contrário, deixaria de existir uma ligação entre a árvore e sub-árvore selecionada (que começa no item que se está a arrastar).</li>
+<li>Ao largar itens numa secção vazia da árvore, estes são adicionados na raiz desta árvore.</li>
+<li>Ao largar itens por cima de um pacote de informação, estes são adicionados com irmãos deste. Isto acontece porque os pacotes não podem ter descendentes no RODA-in.</li>
+<li>Ao largar um pai por cima de um dos seus descendentes, a ação é cancelada, pois caso contrário, deixaria de existir uma ligação entre a árvore e subárvore selecionada (que começa no item que se está a arrastar).</li>
 </ul>
 
 <p>Depois do plano de classificação estar completo, pode querer guardá-lo para usar no futuro utilizando a funcionalidade "Exportar" , que se encontra por baixo do <strong>menu Plano de Classificação</strong>.</p>
@@ -181,7 +181,7 @@ Os pacotes de informação podem conter dados e metadados. Os metadados são inc
 <ul>
 <li>text - campo de texto</li>
 <li>text-area - Área de texto. Maior do que um campo de texto</li>
-<li>date - campo de texto com um seleccionador de data</li>
+<li>date - campo de texto com um selecionador de data</li>
 <li>
 list - lista com os valores possíveis do campo (combo box)
 <ul>
