progress on #252: english text added and is pending review

--- a/src/main/resources/help/help_en.html
+++ b/src/main/resources/help/help_en.html
@@ -91,8 +91,20 @@ The applications is composed of 4 distinct panels depicted in light blue in the 
 </ul>
 
 
+<h2>Exporting the SIPs to a folder</h2>
 
+The export SIP window provides some customization options:
 
+<ul>
+    <li><strong>Export all items</strong> - export all the items in the Information Packages panel, or only the selected items.</li>
+    <li><strong>Include hierarchy</strong> - There are SIPs that contain data (i.e. files within) and SIPs that only contain metadata (which are used to create a hierarchical structure in the repository during ingest where the leaf SIPs that contain data will be placed). This option allows the user to export these hierarchical-no-data SIPs or to ignore them.</li>
+    <li><strong>Create inventory report</strong> - Creates a CSV report containing basic SIP information.</li>
+    <li><strong>Output directory</strong> - The directory where the SIPs will be created.</li>
+    <li><strong>SIP format</strong> - The SIP format for the new SIPs.</li>
+    <li><strong>SIP names</strong> - The SIP file naming strategy. There are several patterns (selectable in the right) for naming SIP files, that may have some automatic fields (like "Date") and manual fields (like "Title"). The inputs on the left side are used to fill in the manual portions of the SIP names.</li>
+</ul>
+
+<img src="createsip_en.png" width="50%"/>
 
 <h1>Advanced options</h1>
 
